--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,19 @@
 Package: lsttheory
 Title: Latent State-Trait Theory
-Version: 0.1-1
+Version: 0.1-2
 Author: Axel Mayer <Axel.Mayer@uni-jena.de>
 Maintainer: Axel Mayer <Axel.Mayer@uni-jena.de>
 Description: Compute several models of latent state-trait theory
-Depends: R (>= 3.0.1), lavaan
-Imports: methods
+Depends:
+    R (>= 3.0.1),
+    lavaan
+Imports:
+    methods
 Suggests:
 License: GPL (>= 2)
 LazyLoad: yes
 LazyData: yes
 Packaged: 2013-12-07
+Collate:
+    'growthcomponents.R'
+    'lsttheory.R'
