--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: lsttheory
 Title: Latent State-Trait Theory
 Version: 0.1-2
-Author: Axel Mayer <Axel.Mayer@uni-jena.de>
-Maintainer: Axel Mayer <Axel.Mayer@uni-jena.de>
+Author: Axel Mayer <amayer2010@gmail.com>
+Maintainer: Axel Mayer <amayer2010@gmail.com>
 Description: Compute several models of latent state-trait theory
 Depends:
     R (>= 3.0.1),
@@ -10,6 +10,8 @@ Depends:
 Imports:
     methods
 Suggests:
+    shiny,
+    semPlot
 License: GPL (>= 2)
 LazyLoad: yes
 LazyData: yes
