--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,23 @@
 Package: lsttheory
 Title: Latent State-Trait Theory
-Version: 0.2-1.002
-Author: Axel Mayer <amayer2010@gmail.com>
+Version: 0.3-1.001
+Authors@R: c(
+    person("Axel", "Mayer", email = "amayer2010@gmail.com", role = "cre"),
+    person("Julia", "Norget", role = "ctb"))
 Maintainer: Axel Mayer <amayer2010@gmail.com>
-Description: Compute several models of latent state-trait theory
+Description: Compute several models of latent state-trait theory.
 Depends:
     R (>= 3.5.0),
     lavaan
 Imports:
-    methods
+    methods,
+    dplyr
 Suggests:
     shiny,
     semPlot
 License: GPL (>= 2)
+Encoding: UTF-8
 LazyLoad: yes
 LazyData: yes
-Packaged: 2013-12-07
-RoxygenNote: 7.0.2
+Packaged: 2022-11-21
+RoxygenNote: 7.2.1
