First MM-LST-RF version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,11 @@ export(lstesGUI)
 export(lsttheory)
 export(lsttheoryGUI)
 export(lsttheory_es)
+export(mmLSTrf)
+export(mmLSTrfGUI)
 import(dplyr)
 import(lavaan)
+importFrom(magrittr,"%>%")
 importFrom(methods,is)
 importFrom(methods,new)
 importFrom(stats,as.formula)
@@ -30,4 +33,5 @@ importFrom(utils,combn)
 importFrom(utils,read.csv)
 importFrom(utils,read.csv2)
 importFrom(utils,read.table)
+importFrom(utils,tail)
 importMethodsFrom(methods,show)
