--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: lsttheory
 Title: Latent State-Trait Theory
-Version: 0.3-1.006
+Version: 0.4-1.001
 Authors@R: c(
     person("Axel", "Mayer", email = "amayer2010@gmail.com", role = "cre"),
-    person("Julia", "Norget", role = "ctb"))
+    person("Julia", "Norget", role = "ctb"),
+    person("Dora", "Tinhof", role = "ctb"))
 Maintainer: Axel Mayer <amayer2010@gmail.com>
 Description: Compute several models of latent state-trait theory.
 Depends:
@@ -11,14 +12,15 @@ Depends:
     lavaan
 Imports:
     methods,
-    dplyr
-Suggests:
+    dplyr,
     shiny,
     DT,
+    bsplus,
+    magrittr
+Suggests:
     semPlot
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyLoad: yes
 LazyData: yes
-Packaged: 2022-11-21
 RoxygenNote: 7.3.2
