--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: lsttheory
 Title: Latent State-Trait Theory
-Version: 0.4-1.003
+Version: 0.4-1.004
 Authors@R: c(
     person("Axel", "Mayer", email = "amayer2010@gmail.com", role = "cre"),
     person("Julia", "Norget", role = "ctb"),
@@ -16,7 +16,8 @@ Imports:
     shiny,
     DT,
     bsplus,
-    magrittr
+    magrittr,
+    foreign
 Suggests:
     semPlot
 License: GPL (>= 2)
