--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: lsttheory
 Title: Latent State-Trait Theory
-Version: 0.4-1.004
+Version: 0.4-1.006
 Authors@R: c(
     person("Axel", "Mayer", email = "amayer2010@gmail.com", role = "cre"),
     person("Julia", "Norget", role = "ctb"),
@@ -16,8 +16,7 @@ Imports:
     shiny,
     DT,
     bsplus,
-    magrittr,
-    foreign
+    magrittr
 Suggests:
     semPlot
 License: GPL (>= 2)
