--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ importFrom(stats,sd)
 importFrom(stats,var)
 importFrom(utils,capture.output)
 importFrom(utils,combn)
+importFrom(utils,head)
 importFrom(utils,read.csv)
 importFrom(utils,read.csv2)
 importFrom(utils,read.table)
